--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,13 @@
 .download,
-.warranty {
+.warranty,
+.care {
   padding-top: 3.125rem;
   padding-bottom: 3.125rem;
 }
 
 .download__wrapper,
-.warranty__wrapper {
+.warranty__wrapper,
+.care__wrapper {
   display: flex;
   justify-content: space-between;
   gap: 110px;
@@ -16,7 +18,8 @@
 }
 
 .download__text-block,
-.warranty__text-block {
+.warranty__text-block,
+.care__text-block {
   width: 50%;
   display: flex;
   flex-direction: column;
@@ -30,14 +33,16 @@
   line-height: normal;
 }
 
-.warranty__title {
+.warranty__title,
+.care__title {
   font-size: 2.5rem;
   font-weight: 700;
   line-height: normal;
 }
 
 .download__copy,
-.warranty__copy {
+.warranty__copy,
+.care__copy {
   max-width: 31.25rem;
   font-size: 1.25rem;
   font-style: normal;
@@ -50,7 +55,8 @@
 }
 
 .download__image-block,
-.warranty__image-block {
+.warranty__image-block,
+.care__image-block {
   width: 50%;
   display: flex;
   justify-content: flex-end;
@@ -61,7 +67,8 @@
 }
 
 .download__image-block img,
-.warranty__image-block img {
+.warranty__image-block img,
+.care__image-block img {
   max-width: 100%;
   height: auto;
   border-radius: 1.25rem;
@@ -71,7 +78,8 @@
 @media (max-width: 1152px) {
 
   .download__wrapper,
-  .warranty__wrapper {
+  .warranty__wrapper, 
+  .care__wrapper {
     gap: 40px;
   }
 
@@ -79,12 +87,14 @@
     font-size: 2.625rem;
   }
 
-  .warranty__title {
+  .warranty__title, 
+  .care__title {
     font-size: 2.125rem;
   }
 
   .download__copy,
-  .warranty__copy {
+  .warranty__copy,
+  .care__copy {
     max-width: 27.8125rem;
     font-size: 1.125rem;
     line-height: 1.6875rem;
@@ -94,7 +104,8 @@
 @media (max-width: 920px) {
 
   .download__wrapper,
-  .warranty__wrapper {
+  .warranty__wrapper,
+  .care__wrapper {
     gap: 30px;
   }
 
@@ -102,12 +113,14 @@
     font-size: 2.25rem;
   }
 
-  .warranty__title {
+  .warranty__title, 
+  .care__title {
     font-size: 1.875rem;
   }
 
   .download__copy,
-  .warranty__copy {
+  .warranty__copy,
+  .care__copy {
     max-width: 20.625rem;
     font-size: .875rem;
     line-height: 1.3125rem;
@@ -117,14 +130,16 @@
 @media (max-width: 720px) {
 
   .download__wrapper,
-  .warranty__wrapper {
+  .warranty__wrapper,
+  .care__wrapper {
     flex-direction: column;
     align-items: center;
     gap: 30px;
   }
 
   .download__text-block,
-  .warranty__text-block {
+  .warranty__text-block,
+  .care__text-block {
     width: 100%;
     align-items: center;
   }
@@ -134,12 +149,14 @@
     max-width: 20.625rem;
   }
 
-  .warranty__title {
+  .warranty__title,
+  .care__title {
     font-size: 1.625rem;
   }
 
   .download__image-block,
-  .warranty__image-block {
+  .warranty__image-block,
+  .care__image-block {
     width: 100%;
     justify-content: center;
 
